# Realsense-Test

./: AstraSDKInstall.txt  CMakeLists.txt  OpenCV2.4.8Install.txt  OpenCV_3.4_Installation.txt  README.md
testBody/: CMakeLists.txt  main.cpp
testBodyDrill/: CMakeLists.txt  main.cpp
testColor/: CMakeLists.txt  main.cpp
